# datamedic

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
app/: events.py  graph.py  main.py  memory.py  nodes.py  prompts.py  report.py  sandbox.py
app/static/: app.js  index.html  style.css
examples/: sales.csv
tests/: test_csv_loading.py  test_graph.py  test_sandbox.py
