[project]
name = "datamedic"
version = "0.1.0"
description = "Self-healing data analyst agent: CSV in, agentic self-correcting analysis out."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "langgraph>=0.2.45",
    "langchain-groq>=0.2.1",
    "langchain-core>=0.3.15",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
